css/mediaqueries.css
@media (min-width: 1280px) {
  body {
    overflow-y: hidden;
  }

  .main-layout {
    width: 1257px;
    margin: 0 auto;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    position: absolute;
    height: 655px;
  }

  .main-header {
    border-radius: 50px;
    height: 73px;
  }

  .logo {
    margin-left: 80px;
    font-size: 20px;
    padding-top: 17px;
    height: 65px;
  }

  .btn-menu {
    display: none;
  }

  .main-nav {
    width: 468px;
    display: flex;
    justify-content: flex-end;
  }

  .nav-btn {
    font-size: larger;
    width: 116px;
    font-family: PoppinsMed;
    height: 40px;
    background-color: white;
    border: none;
    border-radius: 50px;
    background: none;
    cursor: pointer;
    color: white;
  }

  .btn-about {
    margin-right: 218px;
    margin-left: 22.5px;
  }

  .main-container {
    height: 566px;
    margin-left: 7px;
    margin-right: 7px;
  }

  .image-container {
    height: 566px;
    width: 1171px;
    margin-top: 16px;
  }

  .gallery {
    margin-top: 128px;
    width: 1171px;
    height: 437px;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(199.5px, 1fr));
    grid-auto-rows: 200.5px;
    margin-left: 57px;
    overflow-y: scroll;
  }

  img {
    height: 173px;
    width: 199.5px;
  }

  #my-canvas {
    margin-left: 6px;
    margin-top: 6px;
    width: 476px;
    height: 546px;
    border-radius: 34px;
  }

  .canvas-container {
    width: 488px;
    height: 556px;
    margin-left: 78px;
    order: -1;
  }

  .editor-container {
    margin-top: 21px;
    width: 476px;
    height: 546px;
    justify-content: space-between;
  }

  .editor {
    align-items: center;
    margin-right: 74px;
    width: 525px;
    height: 546px;
    flex-direction: column;
  }

  .download-btn {
    margin-top: 140px;
  }

  .change-text {
    width: 444.5px;
  }

  .change-text {
    margin-top: 24px;
  }

  .btn-switch-txt {
    margin-top: -12px;
  }

  .size-align-font-color-switch {
    width: 444.5px;
    height: 149.5px;
    margin-top: 24px;
  }

  .editor-props {
    justify-content: space-evenly;
  }

  .top-row {
    margin-top: 11px;
    height: 61px;
    justify-content: space-between;
  }

  .bottom-row {
    margin-top: 10px;
    height: 71px;
    justify-content: space-between;
  }

  .txt-size-btns {
    width: 162px;
    justify-content: space-between;
  }

  .text-align {
    width: 248px;
  }

  .align-right {
    margin-right: 16px;
  }

  .add-remove-raise-lower {
    margin-top: 20px;
    width: 292px;
    height: 58px;
  }

  .direction-btns {
    width: 50%;
  }

  .arrow-down {
    padding-bottom: 7px;
  }

  .arrow-up {
    padding-bottom: 7px;
  }

  .add-remove-btns {
    width: 50%;
  }

  .size-bigger {
    margin-left: 18px;
  }

  .font-change {
    width: 235px;
    margin-left: 18px;
  }

  .color-switch-btns {
    width: 159px;
    justify-content: space-between;
  }

  .btn-txt-color {
    margin-right: 16px;
  }

  .line-remove {
    font-size: 50px;
    padding-left: 9px;
  }

  .download-btn {
    width: 212px;
  }
}

@media (max-width: 1279px) {
  body {
    overflow-y: hidden;
  }

  .main-layout {
    width: 90%;
    margin: 0 auto;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    position: absolute;
    height: 835px;
  }

  .main-header {
    border-radius: 50px;
    height: 73px;
  }

  .logo {
    height: 65px;
  }

  .nav-btn {
    width: 100px;
    font-family: PoppinsMed;
    height: 35px;
    border: none;
    border-radius: 50px;
    background: none;
    cursor: pointer;
    color: white;
  }

  .btn-about {
    margin-left: 10px;
    margin-right: 31px;
  }

  .btn-menu {
    display: none;
  }

  .main-container {
    height: 746px;
    margin-left: 7px;
    margin-right: 7px;
  }

  .image-container {
    height: 747px;
    margin-top: 16px;
  }

  .gallery {
    margin-top: 128px;
    display: grid;
    height: 608px;
    grid-template-columns: repeat(auto-fill, minmax(200.5px, 1fr));
    grid-auto-rows: 203.5px;
    margin-left: 37px;
    overflow-y: scroll;
  }

  img {
    width: 199.5px;
    height: 173px;
  }

  .logo {
    margin-left: 77px;
    font-size: 21px;
    padding-top: 17px;
  }

  .main-nav {
    margin-right: 30px;
    width: 317px;
    display: flex;
    justify-content: flex-end;
  }

  .nav-btn {
    font-size: larger;
  }

  #my-canvas {
    margin-left: 0px;
    margin-top: 6px;
    width: 100%;
    height: 388px;
    border-radius: 34px;
  }

  .canvas-container {
    width: 70%;
    height: 394px;
    margin-left: 15%;
  }

  .editor-container {
    flex-direction: column;
    justify-content: space-between;
    margin-top: 21px;
  }

  .editor {
    align-items: center;
    margin-top: 15px;
    height: 436px;
    width: 100%;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-evenly;
  }

  .download-btn {
    margin-top: 15px;
    margin-bottom: 7px;
    order: 2;
  }

  .change-text {
    order: -1;
    margin-top: 24px;
  }

  .add-remove-raise-lower {
    order: 1;
    margin-bottom: -15px;
    width: 292px;
    height: 58px;
  }

  .direction-btns {
    width: 50%;
  }

  .arrow-down {
    padding-bottom: 7px;
  }

  .arrow-up {
    padding-bottom: 7px;
  }

  .add-remove-btns {
    width: 50%;
  }

  .change-text {
    width: 444.5px;
  }

  .editor-props {
    justify-content: space-evenly;
  }

  .size-align-font-color-switch {
    width: 444.5px;
    height: 149.5px;
    margin-top: 24px;
  }

  .top-row {
    margin-top: 11px;
    height: 61px;
    justify-content: space-between;
  }

  .text-align {
    width: 248px;
    margin-left: 18px;
  }

  .align-right {
    margin-right: 16px;
  }

  .bottom-row {
    margin-top: 10px;
    height: 71px;
    justify-content: space-between;
  }

  .txt-size-btns {
    width: 162px;
    justify-content: space-between;
  }

  .size-bigger {
    margin-left: 18px;
  }

  .font-change {
    width: 235px;
    margin-left: 18px;
  }

  .color-switch-btns {
    justify-content: space-between;
    width: 159px;
  }

  .btn-switch-txt {
    margin-top: -12px;
  }

  .btn-txt-color {
    margin-right: 16px;
  }

  .line-remove {
    font-size: 50px;
    padding-left: 9px;
  }

  .download-btn {
    width: 212px;
  }
}

@media (max-width: 680px) {
  .main-header {
    border-radius: 0px;
    height: 130px;
  }

  .main-layout {
    margin-top: -8px;
    position: static;
    transform: none;
    height: 936px;
    width: 100%;
  }

  .main-nav {
    position: fixed;
    top: 0;
    right: -173px;
    flex-direction: column;
    justify-content: flex-start;
    background-image: linear-gradient(265deg, #33be6d, #0c98b9);
    opacity: 0.9;
    height: 100vh;
    transform: translateX(100%);
    transition: transform 0.6s, box-shadow 0.6s;
  }

  body.menu-open .main-nav {
    transform: translateX(0);
  }

  .nav-btn {
    font-size: 30px;
    margin-left: 0px;
    width: 185px;
    font-family: PoppinsMed;
    height: 126px;
    border: none;
    border-radius: 0px;
    background: none;
    cursor: pointer;
    color: white;
  }

  .btn-menu {
    margin-right: 40px;
    display: block;
    font-size: 40px;
    margin-left: 0px;
    width: 64px;
    font-family: PoppinsMed;
    height: 64px;
    border: none;
    border-radius: 50%;
    background: none;
    cursor: pointer;
    color: white;
  }

  body.menu-open .btn-menu {
    display: none;
  }

  .btn-about {
    padding-right: 13px;
  }

  .main-container {
    height: 796px;
    margin-left: 17px;
    margin-right: 20px;
  }

  .image-container {
    height: 1164px;
    margin-top: 17px;
  }

  .gallery {
    margin-top: 218px;
    display: grid;
    height: 915px;
    grid-template-columns: repeat(auto-fill, minmax(288.5px, 1fr));
    grid-auto-rows: 301.5px;
    row-gap: 17px;
    margin-left: 20px;
  }

  img {
    width: 286.5px;
    height: 302px;
  }

  .logo {
    margin-left: 59px;
    padding-top: 14px;
    font-size: 28px;
    height: 113px;
  }

  .editor-container {
    justify-content: flex-start;
  }

  .editor {
    align-items: center;
    width: 90%;
    margin-left: 5%;
    height: 318px;
  }

  .canvas-container {
    width: 80%;
    height: 345px;
    margin-left: 10%;
  }

  #my-canvas {
    height: 333px;
  }

  .download-btn {
    margin-bottom: 10px;
  }

  .add-remove-raise-lower {
    margin-bottom: 0px;
    margin-top: 20px;
  }

  .arrow-down {
    padding-bottom: 7px;
  }

  .arrow-up {
    padding-bottom: 7px;
  }

  .change-text {
    width: 90%;
  }

  .change-text {
    margin-top: 13px;
  }

  .btn-switch-txt {
    margin-top: -12px;
  }

  .size-align-font-color-switch {
    height: 149.5px;
    margin-top: 24px;
  }

  .line-remove {
    font-size: 50px;
    padding-left: 9px;
  }
}

@media (max-width: 600px) {
  body {
    overflow-y: visible;
  }

  .main-layout {
    height: 1000px;
  }

  .logo {
    margin-left: 28px;
    height: 98px;
  }

  .main-nav {
    right: -235px;
  }

  .btn-menu {
    margin-right: 16px;
    padding-bottom: 59px;
    border-radius: 50%;
    height: 53px;
  }

  .nav-btn {
    width: 118px;
    font-size: 20px;
  }

  .btn-about {
    padding-right: 9px;
  }

  .main-container {
    height: 844px;
  }

  .image-container {
    height: 829px;
  }

  .gallery {
    height: 602px;
    margin-left: 30px;
  }

  img {
    width: 305.5px;
  }

  .canvas-container {
    width: 90%;
    height: 258px;
    margin-left: 5%;
  }

  #my-canvas {
    height: 250px;
  }

  .editor-container {
    margin-top: 15px;
  }

  .editor {
    height: 556px;
    width: 84%;
    margin-left: 8%;
    margin-top: 15px;
  }

  .change-text {
    margin-top: 0px;
  }

  .size-align-font-color-switch {
    margin-top: 5px;
    width: 90%;
    height: 250px;
  }

  .top-row {
    margin-top: 6px;
    height: 44%;
    flex-direction: column;
    justify-content: flex-start;
  }

  .txt-size-btns {
    margin-left: 5%;
    width: 90%;
    justify-content: space-around;
  }

  .size-bigger {
    margin-left: 0px;
  }

  .bottom-row {
    margin-top: 13px;
    height: 44%;
    flex-direction: column;
    justify-content: flex-start;
  }

  .text-align {
    width: 90%;
    margin-left: 5%;
    margin-top: 10px;
  }

  .align-right {
    margin-right: 0px;
  }

  .font-change {
    width: 90%;
    margin-left: 5%;
    margin-bottom: 10px;
  }

  .color-switch-btns {
    width: 90%;
    margin-left: 5%;
    justify-content: space-around;
  }

  .btn-txt-color {
    margin-right: 0px;
  }

  .btn-switch-txt {
    margin-top: -8px;
  }

  .add-remove-raise-lower {
    margin-top: 0px;
    width: 90%;
    flex-direction: column;
    align-items: center;
    height: 127px;
  }

  .direction-btns {
    width: 90%;
  }

  .arrow-up {
    padding-bottom: 0px;
  }

  .arrow-down {
    padding-bottom: 0px;
  }

  .add-remove-btns {
    width: 90%;
  }

  .line-remove {
    padding-left: 5px;
    font-size: 35px;
  }

  .download-btn {
    margin-bottom: 0px;
    margin-top: 0px;
    width: 90%;
  }
}

